conversations completed in web and  api
